WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
142467
[iOS] Fix build when compiling with dead code stripping disabled
https://bugs.webkit.org/show_bug.cgi?id=142467
Summary
[iOS] Fix build when compiling with dead code stripping disabled
David Kilzer (:ddkilzer)
Reported
2015-03-08 15:39:26 PDT
Building for the iOS Simulator with dead code stripping disabled results in missing symbol errors when linking WebkitLegacy.framework: Undefined symbols for architecture i386: "_WKPCSetException", referenced from: __XPCSetException in WebKitPluginClientServer.o "_WKPCBooleanAndDataReply", referenced from: __XPCBooleanAndDataReply in WebKitPluginClientServer.o "_WKPCGetScriptableNPObjectReply", referenced from: __XPCGetScriptableNPObjectReply in WebKitPluginClientServer.o "_WKPCResolveURL", referenced from: __XPCResolveURL in WebKitPluginClientServer.o "_WKPCSetFullscreenWindowIsShowing", referenced from: __XPCSetFullscreenWindowIsShowing in WebKitPluginClientServer.o "_WKPCCancelCheckIfAllowedToLoadURL", referenced from: __XPCCancelCheckIfAllowedToLoadURL in WebKitPluginClientServer.o "_WKPCSetModal", referenced from: __XPCSetModal in WebKitPluginClientServer.o "_WKPCEnumerate", referenced from: __XPCEnumerate in WebKitPluginClientServer.o "_WKPCIdentifierInfo", referenced from: __XPCIdentifierInfo in WebKitPluginClientServer.o "_WKPCHasProperty", referenced from: __XPCHasProperty in WebKitPluginClientServer.o "_WKPCGetAuthenticationInfo", referenced from: __XPCGetAuthenticationInfo in WebKitPluginClientServer.o "_WKPCRemoveProperty", referenced from: __XPCRemoveProperty in WebKitPluginClientServer.o "_WKPCGetProperty", referenced from: __XPCGetProperty in WebKitPluginClientServer.o "_WKPCConstruct", referenced from: __XPCConstruct in WebKitPluginClientServer.o "_WKPCInvokeDefault", referenced from: __XPCInvokeDefault in WebKitPluginClientServer.o "_WKPCBooleanReply", referenced from: __XPCBooleanReply in WebKitPluginClientServer.o "_WKPCForgetBrowserObject", referenced from: __XPCForgetBrowserObject in WebKitPluginClientServer.o "_WKPCGetWindowNPObject", referenced from: __XPCGetWindowNPObject in WebKitPluginClientServer.o "_WKPCLayerHostingModeChanged", referenced from: __XPCLayerHostingModeChanged in WebKitPluginClientServer.o "_WKPCSetMenuBarVisible", referenced from: __XPCSetMenuBarVisible in WebKitPluginClientServer.o "_WKPCSetProperty", referenced from: __XPCSetProperty in WebKitPluginClientServer.o "_WKPCSetCookies", referenced from: __XPCSetCookies in WebKitPluginClientServer.o "_WKPCGetIntIdentifier", referenced from: __XPCGetIntIdentifier in WebKitPluginClientServer.o "_WKPCHasMethod", referenced from: __XPCHasMethod in WebKitPluginClientServer.o "_WKPCGetStringIdentifier", referenced from: __XPCGetStringIdentifier in WebKitPluginClientServer.o "_WKPCInvalidateRect", referenced from: __XPCInvalidateRect in WebKitPluginClientServer.o "_WKPCLoadURL", referenced from: __XPCLoadURL in WebKitPluginClientServer.o "_WKPCConvertPoint", referenced from: __XPCConvertPoint in WebKitPluginClientServer.o "_WKPCGetProxy", referenced from: __XPCGetProxy in WebKitPluginClientServer.o "_WKPCInstantiatePluginReply", referenced from: __XPCInstantiatePluginReply in WebKitPluginClientServer.o "_WKPCEvaluate", referenced from: __XPCEvaluate in WebKitPluginClientServer.o "_WKPCGetPluginElementNPObject", referenced from: __XPCGetPluginElementNPObject in WebKitPluginClientServer.o "_WKPCGetCookies", referenced from: __XPCGetCookies in WebKitPluginClientServer.o "_WKPCCheckIfAllowedToLoadURL", referenced from: __XPCCheckIfAllowedToLoadURL in WebKitPluginClientServer.o "_WKPCCancelLoadURL", referenced from: __XPCCancelLoadURL in WebKitPluginClientServer.o "_WKPCStatusText", referenced from: __XPCStatusText in WebKitPluginClientServer.o "_WKPCInvoke", referenced from: __XPCInvoke in WebKitPluginClientServer.o "__ZN26WebInspectorFrontendClient4saveERKN3WTF6StringES3_bb", referenced from: __ZTV26WebInspectorFrontendClient in WebInspectorClientIOS.o ld: symbol(s) not found for architecture i386 clang: error: linker command failed with exit code 1 (use -v to see invocation)
Attachments
Patch v1
(4.52 KB, patch)
2015-03-08 15:49 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2015-03-08 15:49:34 PDT
Created
attachment 248212
[details]
Patch v1
WebKit Commit Bot
Comment 2
2015-03-09 11:58:59 PDT
Comment on
attachment 248212
[details]
Patch v1 Clearing flags on attachment: 248212 Committed
r181273
: <
http://trac.webkit.org/changeset/181273
>
WebKit Commit Bot
Comment 3
2015-03-09 11:59:02 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug