[iOS] Fix build when compiling with dead code stripping disabled <http://webkit.org/b/142467>

Reviewed by Simon Fraser.

Source/WebKit/ios:

* WebCoreSupport/WebInspectorClientIOS.mm:
(WebInspectorFrontendClient::save): Add missing method.

Source/WebKit/mac:

* Configurations/WebKitLegacy.xcconfig:
(EXCLUDED_SOURCE_FILE_NAMES[sdk=iphone*]): Disable mig code
generation and compilation for out-of-process plugin support.
This was never used on iOS.


Canonical link: https://commits.webkit.org/160529@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181273 268f45cc-cd09-0410-ab3c-d52691b4dbfc